# docs/swagger.yaml
@@ -73,13 +73,25 @@ definitions:
     type: object
   apis.EstimateResult:
     properties:
+      annual_total:
+        type: string
       assumptions:
         items:
           type: string
         type: array
+      breakdown:
+        items:
+          $ref: '#/definitions/apis.LineItem'
+        type: array
+      catalog_source:
+        type: string
       catalog_version:
         type: string
       currency:
+        type: string
+      daily_total:
+        type: string
+      hourly_total:
         type: string
       monthly_total:
         type: string
@@ -88,6 +100,23 @@ definitions:
       region:
         type: string
       service:
+        type: string
+      warnings:
+        items:
+          type: string
+        type: array
+    type: object
+  apis.LineItem:
+    properties:
+      description:
+        type: string
+      quantity:
+        type: number
+      rate:
+        type: string
+      total:
+        type: string
+      unit:
         type: string
     type: object
   apis.Problem:
@@ -146,9 +175,6 @@ definitions:
       instance:
         example: t3.micro
         type: string
-      storage_gb:
-        example: 20
-        type: number
     type: object
 info:
   contact: {}
